# VKS3D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  stereo_icd.map.in  vks3d.ini
.github/workflows/: build.yml
include/: dxgi_output.h  ini.h  platform.h  present_alt.h  present_nv3d.h  spirv_min.h  stereo_icd.h  tes_inject.h
manifest/: VKS3D_x64.json  VKS3D_x86.json  stereo_vk_icd.json
scripts/: Install-VKS3D.ps1  debug.cmd  install.bat  log.bat  uninstall.bat
shaders/: composite.frag.glsl  composite.vert.glsl
src/: VKS3D.def  VKS3D.rc  device.c  dxgi_output.c  framebuffer.c  icd_main.c  image_view.c  ini.c  instance.c  physdev.c  physdev_ext.c  present.c  present_alt.c  present_nv3d.c  present_nv3d.cpp  render_pass.c  shader.c  stereo.c  swapchain.c  tes_inject.c
tests/: CMakeLists.txt  demo.c  test_spirv_patch.c  test_stereo_math.c  vks3d_diag.c
